<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">DistanceDays</string>
    <string name="main_tab_distance_days">倒数日</string>
    <string name="main_tab_history">历史今天</string>
    <string name="main_tab_relax">每日文章</string>
    <string name="main_tab_setting">设置</string>
    <string name="appwidget_event_label_4x3">日历倒数日(4 x 3)</string>
    <string name="title_detail">Distance Day</string>
    <string name="action_settings">Settings</string>
    <string name="action_switch_layout">SwitchLayout</string>
    <string name="action_add_event">AddEvent</string>
    <string name="action_edit_event">EditEvent</string>
    <string name="string_target_date">目标日: %1$s</string>
    <string name="string_version_name">v%1$s</string>
    <string name="string_date">%1$s年%2$s月%3$s日</string>
    <string name="string_feedback_context_hint">亲爱的用户：\n\t\t您好！\n\t\t感谢您对我们团队的支持。如果你在正常使用过程中，遇到了问题，或者对产品有任何建议，都可以在这里写下来发送给我们，我们期待您的反馈。  </string>
    <string name="string_feedback_contact">请留下您的邮箱或QQ号</string>
    <string name="string_feedback_word_count">%1$s/300</string>
    <string name="string_error_network">网络不给力</string>
    <string name="string_author_prefix">作者：%1$s</string>
    <string name="string_day">%1$s天</string>
    <string name="string_ends_date_hint">(未来日期为倒数，过去日期为正数)</string>
    <string name="string_top_hint">(首页列表模式下置顶显示)</string>
    <string name="toast_add_event_failure">保存事件失败</string>
    <string name="toast_function_development">功能开发中...</string>
    <string name="string_network_error">网络异常，请稍后再试&#8230;</string>
    <string name="share_weixin_friend">微信</string>
    <string name="share_weixin_group">朋友圈</string>
    <string name="share_qq">qq</string>
    <string name="the_wechat_client_not_installed">你没有安装微信。</string>
    <string name="the_wechat_api_not_support">微信版本较低，请升级至最高版本重试。</string>
    <string name="loading_loading">加载中……</string>
    <string name="share_umeng_toast_text">正在打开%s</string>
    <string name="share_umeng_default_text">正在分享</string>
    <string name="share_to_wechat">微信</string>
    <string name="share_to_wechat_circle">微信朋友圈</string>
    <string name="share_to_wechat_circle2">朋友圈</string>
    <string name="share_to_qq">QQ</string>
    <string name="share_error_msg">分享失败,请确认网络状态后重试！</string>
    <string name="share_final_error_msg">打开%s失败</string>
    <string name="share_error_no_config">暂不支持该方式邀请好友</string>
    <string name="share_error_no_support">暂不支持</string>
    <string name="share_error_no_platform">请先安装%s</string>
    <string name="share_error_no_qq">请先安装QQ</string>
    <string name="share_error_no_wechat">请先安装微信</string>
    <string name="toast_feedback_fail">提交成功</string>
    <string name="toast_event_name_max_length">事件名称不超过15个字符</string>
    <string name="abc_action_bar_home_description">转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">%1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_capital_off">关闭</string>
    <string name="abc_capital_on">开启</string>
    <string name="abc_search_hint">搜索…</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">通过%s分享</string>
    <string name="abc_toolbar_collapse_description">收起</string>
    <string name="common_google_play_services_unknown_issue">%1$s无法访问 Google Play 服务。如果问题一直存在，请与开发者联系以寻求帮助。</string>
    <string name="search_menu_title">搜索</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="add_background">添加背景</string>
    <string name="add_new_category">添加新分类</string>
    <string name="add_widget">Add widget</string>
    <string name="alarm_type_none">不设置提醒</string>
    <string name="alarm_type_today">当天提醒</string>
    <string name="alarm_type_yesterday">前一天提醒</string>
    <string name="already">{0}已经</string>
    <string name="already_updated">当前版本为最新版</string>
    <string name="backup_mail_title">Days Matter 备份 [{0}]</string>
    <string name="backup_now">立即备份</string>
    <string name="black">黑色</string>
    <string name="calculate_days_after">天之前</string>
    <string name="calculate_days_before">天之后</string>
    <string name="calculate_days_still">还有</string>
    <string name="calculate_days_to">距离</string>
    <string name="calculate_from">从</string>
    <string name="calculate_start">开始</string>
    <string name="calculate_tip">请输入数字开始计算</string>
    <string name="cancel">取消</string>
    <string name="category">分类</string>
    <string name="change_background">修改背景</string>
    <string name="check_file">查看文件</string>
    <string name="clear_all">清空所有</string>
    <string name="click_to_chose">点击选择</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="confirm_category_delete">当前分类下尚有事件,是否要继续删除?</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="cs_app_locale">zh-Hans</string>
    <string name="cs_download">免费下载</string>
    <string name="cs_download_short">免费</string>
    <string name="cs_edit_user_info">修改资料</string>
    <string name="cs_ic_locale">zh-Hans</string>
    <string name="cs_inbox">收件箱</string>
    <string name="cs_inbox_header">我的收件箱</string>
    <string name="cs_inbox_header_summary">{0}未读</string>
    <string name="cs_log_out">登出</string>
    <string name="cs_network_error">登录失败,请检查网络</string>
    <string name="cs_open">打开</string>
    <string name="cs_sync_title_cloud">仅下载云端数据</string>
    <string name="cs_sync_title_cloud_hint">所有本地数据将被删除并替换为云端数据。</string>
    <string name="cs_sync_title_local">将本地数据覆盖到云端</string>
    <string name="cs_sync_title_local_backup">将备份数据覆盖到云端。</string>
    <string name="cs_sync_title_local_hint">云端原有数据将被删除并替换为本地数据。</string>
    <string name="cs_sync_title_merge">保留所有数据</string>
    <string name="cs_sync_title_merge_hint">推荐选项。您的所有本地数据都会安全地合并到云端。</string>
    <string name="cs_sync_title_welcome">使用 iCity Cloud 同步或备份您的数据</string>
    <string name="cs_sync_title_welcome_hint">你的所有数据都会安全地储存在云端，\10并可在不同设备间随时访问。</string>
    <string name="cs_unlock_success">解锁成功！谢谢支持~</string>
    <string name="cs_user_change_info">修改资料和头像</string>
    <string name="cs_user_load_backup">开始恢复</string>
    <string name="cs_user_log_out">确认登出当前账户？</string>
    <string name="cs_user_setting_about">关于我</string>
    <string name="cs_user_setting_about_hint">可选</string>
    <string name="cs_user_setting_avatar">修改头像</string>
    <string name="cs_user_setting_cover">修改背景</string>
    <string name="cs_user_setting_exit">退出登录</string>
    <string name="cs_user_setting_location">所在地</string>
    <string name="cs_user_setting_location_hint">可选</string>
    <string name="cs_user_setting_name">昵称</string>
    <string name="cs_user_setting_name_hint">您的称呼</string>
    <string name="cs_user_setting_password">密码设置</string>
    <string name="cs_user_sign_in_error">登录失败</string>
    <string name="cs_user_sign_up_error_email">请输入正确的邮箱地址</string>
    <string name="cs_user_sign_up_error_name">用户ID过短(8位以上字母和数字)</string>
    <string name="cs_user_sign_up_error_password">密码不能少于六位</string>
    <string name="cs_user_sign_up_title">iCity ID 账号登录</string>
    <string name="cs_user_sync_confirm">开始使用 iCity 同步</string>
    <string name="days">天</string>
    <string name="delete">删除</string>
    <string name="delete_background">删除背景</string>
    <string name="delete_backup_title">是否删除当前备份？</string>
    <string name="display_order_countdown_days">按事件时间</string>
    <string name="display_order_creation_date">按添加时间</string>
    <string name="edit">编辑</string>
    <string name="edit_category">编辑分类</string>
    <string name="edit_title_edit">编辑事件</string>
    <string name="edit_title_new">新增事件</string>
    <string name="edit_user_info">修改资料</string>
    <string name="end_date">结束时间</string>
    <string name="ends_date">目标日:</string>
    <string name="ends_date_title">目标日</string>
    <string name="event_today">{0}就是今天</string>
    <string name="event_tomorrow">{0}就是明天</string>
    <string name="feedback">反馈</string>
    <string name="hint_add">添加倒数日</string>
    <string name="hint_no_history_to_share">要分享的内容为空</string>
    <string name="hint_reload">重新加载</string>
    <string name="history">历史</string>
    <string name="ignore">忽略此版本</string>
    <string name="inbox">收件箱</string>
    <string name="inbox_header_summary">{0}未读</string>
    <string name="input_event_title">请输入事件标题</string>
    <string name="is_today">{0}就是今天</string>
    <string name="is_today_big_day">{0} 就是今天</string>
    <string name="last_sync_time">上次同步时间：</string>
    <string name="load_backup_title">是否导入 {0} 备份的{1}条数据?\10(现有数据将被覆盖)</string>
    <string name="lock_confirm_failed">验证失败,请重新绘制！</string>
    <string name="lock_confirm_ok">验证成功</string>
    <string name="lock_draw_again">再次绘制解锁图案</string>
    <string name="lock_draw_map">绘制解锁图案</string>
    <string name="lock_draw_new">请输入新的手势密码</string>
    <string name="lock_draw_old">请输入原手势密码</string>
    <string name="lock_draw_to_unlock">绘制图案解锁</string>
    <string name="lock_set_failed">与上次绘制不一致，设置失败！</string>
    <string name="lock_set_ok">设置成功</string>
    <string name="locked">已锁定</string>
    <string name="log_out">登出</string>
    <string name="lunar">阴历</string>
    <string name="manage_cate">管理分类</string>
    <string name="manage_category">管理分类</string>
    <string name="menu_edit_cate_title">编辑</string>
    <string name="menu_more_title">分享</string>
    <string name="menu_share_title">分享</string>
    <string name="network_error">登录失败,请检查网络</string>
    <string name="new_cate">新分类</string>
    <string name="one_day">天</string>
    <string name="one_month">个月</string>
    <string name="one_year">年</string>
    <string name="preference_alarm_today">当日提醒</string>
    <string name="preference_alarm_yesterday">前日提醒</string>
    <string name="preference_back_up">备份数据</string>
    <string name="preference_back_up_edit">备份管理</string>
    <string name="preference_back_up_help">如何恢复</string>
    <string name="preference_change_lock">修改手势密码</string>
    <string name="preference_enable_lock">手势密码</string>
    <string name="preference_hide_widget">隐藏桌面插件</string>
    <string name="preference_share_to_unlock">分享解锁</string>
    <string name="preference_title_alarm_time">提醒时间设置</string>
    <string name="preference_title_alarm_type">提醒方式</string>
    <string name="preference_title_app_style">解锁高级功能</string>
    <string name="preference_title_auto_on_top">开启自动置顶</string>
    <string name="preference_title_big_font">大字号</string>
    <string name="preference_title_bout_us">关于我们</string>
    <string name="preference_title_display_order">排序方式</string>
    <string name="preference_title_feedback">意见反馈</string>
    <string name="preference_title_hide_description">隐藏事件描述前后缀</string>
    <string name="preference_title_list_style">列表样式</string>
    <string name="preference_title_lock">密码保护</string>
    <string name="preference_title_shared">已解锁功能</string>
    <string name="preference_title_splash">重放引导</string>
    <string name="preference_title_tab_color">Tab 栏样式</string>
    <string name="repeat">重复</string>
    <string name="save">保存</string>
    <string name="solar">公历</string>
    <string name="top">置顶</string>
</resources>