<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_switch_layout"
        android:icon="@mipmap/ic_switch_layout"
        android:orderInCategory="100"
        android:title="@string/action_switch_layout"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_event"
        android:icon="@mipmap/ic_add_event"
        android:orderInCategory="100"
        android:title="@string/action_add_event"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_event"
        android:icon="@mipmap/ic_edit_event"
        android:orderInCategory="100"
        android:title="@string/action_edit_event"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
